RESOLVED FIXED263049
REGRESSION ( Sonoma ): [ Sonoma w2 ] fast/forms/scroll-into-view-and-show-validation-message.html is a consistent failure.
https://bugs.webkit.org/show_bug.cgi?id=263049
Summary REGRESSION ( Sonoma ): [ Sonoma w2 ] fast/forms/scroll-into-view-and-show-val...
Marta Darbinyan
Reported 2023-10-11 17:29:46 PDT
Description: fast/forms/scroll-into-view-and-show-validation-message.html is consistently failing on Sonoma w2 starting from Sonoma bringup. This issue can be reproduced by using the command on ToT: run-webkit-tests --release --iterations=1 fast/forms/scroll-into-view-and-show-validation-message.html History: https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Fscroll-into-view-and-show-validation-message.html&version_name=Sonoma&flavor=wk2 Diff: Tests that the validation bubble is shown even if the invalid field needs to be scrolled into view. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". FAIL Unexpected message: FAIL message should be Fill out this field. Was . PASS successfullyParsed is true Some tests failed. TEST COMPLETE Submit Diff Link: https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/269206@main%20(234)/fast/forms/scroll-into-view-and-show-validation-message-pretty-diff.html
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-11 17:30:13 PDT
Marta Darbinyan
Comment 2 2023-10-12 08:47:59 PDT
Marta Darbinyan
Comment 3 2023-10-12 09:50:07 PDT
Ryosuke Niwa
Comment 4 2024-04-03 15:01:58 PDT
EWS
Comment 5 2024-04-04 11:52:41 PDT
Committed 277069@main (5eb211273e06): <https://commits.webkit.org/277069@main> Reviewed commits have been landed. Closing PR #26812 and removing active labels.
Ryosuke Niwa
Comment 6 2024-04-04 22:07:16 PDT
This indeed appears to be fixed.
Note You need to log in before you can comment on or make changes to this bug.