Cherry-pick 277069@main (5eb211273e06). https://bugs.webkit.org/show_bug.cgi?id=263049

REGRESSION ( Sonoma ): [ Sonoma w2 ] fast/forms/scroll-into-view-and-show-validation-message.html is a consistent failure.
    https://bugs.webkit.org/show_bug.cgi?id=263049

    Reviewed by Simon Fraser and Wenson Hsieh.

    The flakiness was caused by the race condition between callOnMainThread and rendering update. Namely, we sometimes fail
    to scroll to reveal before showing the validation bubble. Fixed the bug by aligning the validation bubble appearance to
    happen after rendering update in Page::doAfterUpdateRendering.

    * LayoutTests/fast/forms/form-validation.js:
    * LayoutTests/platform/mac-wk2/TestExpectations:
    * Source/WebCore/html/ValidatedFormListedElement.cpp:
    (WebCore::ValidatedFormListedElement::focusAndShowValidationMessage):
    * Source/WebCore/page/Page.cpp:
    (WebCore::Page::scheduleValidationMessageUpdate): Added.
    (WebCore::Page::updateValidationMessages): Added.
    (WebCore::Page::doAfterUpdateRendering):
    * Source/WebCore/page/Page.h:

    Canonical link: https://commits.webkit.org/277069@main

Canonical link: https://commits.webkit.org/274313.303@webkitglib/2.44